    - Fix crash on hotplugging a dock with a monitor (LP: #1826182)
    Remaining changes:
    + debian/control:
      - Update VCS flags to point to launchpad
      - Update maintainer to ubuntu
    + debian/gbp.conf: update branch to point to ubuntu/master
    + debian/patches/x11-Add-support-for-fractional-scaling-using-Randr.patch:
      - X11: Add support for fractional scaling using Randr

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Mon, 29 Apr 2019 16:08:24 -0500

mutter (3.32.1-1) experimental; urgency=medium

  * New upstream release
  * debian/patches: disable mousekeys with Numlock ON to match the
    documentation (cherry picked from the 3.32 branch)

 -- Laurent Bigonville <bigon@debian.org>  Mon, 22 Apr 2019 21:57:33 +0200

mutter (3.32.0+git20190410-2) experimental; urgency=medium

  [ Gunnar Hjalmarsson ]
  * Add gnome-control-center-data to Build-Depends. This package provides
    gnome-keybindings.{its,loc}. These are needed if the translation template
    is regenerated at build-time to translate the key bindings defined in
    data/50-*.xml. (LP: #1823722)

 -- Iain Lane <laney@debian.org>  Sun, 14 Apr 2019 11:11:22 +0100

mutter (3.32.0+git20190410-1ubuntu1) disco; urgency=medium

  * Merge with debian git snapshot (LP: #1820542), remaining changes:
    + debian/control:
      - Update VCS flags to point to launchpad
      - Update maintainer to ubuntu
    + debian/gbp.conf: update branch to point to ubuntu/master
    + debian/patches/x11-Add-support-for-fractional-scaling-using-Randr.patch:
      - X11: Add support for fractional scaling using Randr
  * d/p/x11-Add-support-for-fractional-scaling-using-Randr.patch:
    - Refreshed.

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Wed, 10 Apr 2019 20:12:29 -0500

mutter (3.32.0+git20190410-1) experimental; urgency=medium

  * New upstream snapshot up to commit
    b2d0184c6efa164ad5dd7a2ca8b10cf13acf5b4c. Fixes Launchpad bugs: